--------
v3.0-git
--------

[jan] Add preference to limit the events per day in the month view.
[jan] Add system calendars (Request #2059).
[jan] Add URL field to events.
[jan] Add task management capabilities to the Ajax interface.
[jan] Manage holidays like any other calendar driver.
[mjr] Add resource scheduling.
[jan] Integrate tasks into Ajax interface (Gonçalo Queirós
      <mail@goncaloqueiros.net>).
[mjr] Extend listTimeObjects API to include optional links and icons.
[jan] Allow searching of any type of calendar and improve searching of
      recurring events.
[cjh] With only SHOW permissions, display event titles as "busy".
[mjr] Replace categories and keywords by tags.
[jan] Set colors per calendar (Request #7480).
[jan] Add individual notification methods for single events (Alfonso Marín
      Marín <almarin@um.es>).
[jan] Add Ajax interface.
[jan] Store events in UTC and convert to the user's timezone on the fly.
[jan] Remove alarm reminder code.
[jan] Change listEvents API method to return keys as dates instead of
      timestamps.


----------
v2.3.4-cvs
----------




------
v2.3.3
------

[gwr] Fix editing the start date of recurring events (kolab/issue3885).
[jan] Fix editing URLs of remote calendars.
[gwr] Fix recurring weekly events with fixed number of occurences but multiple
      incidences per week (kolab/issue3846).
[gwr] Fix recurring weekly events with intervals > 1 (Bug #8546).
[jan] Optimize event link generation (patrick.abiven@apitech.fr).
[jan] Fix Oracle SQL scripts.
[jan] Fix charset of ajax responses.
[jan] Add Croatian translation (Matej Vela <matej.vela@carnet.hr>).
[jan] Speed up listing alarms (patrick.abiven@apitech.fr, Request #8638).
[jan] Simplify and improve portability of listing events without date limits
      in the SQL driver (Bug #8590).
[mjr] Fix issue that caused the default alarm time to be applied to
      listTimeObjects events (Bug #8588).


------
v2.3.2
------

[mms] Upgrade prototype.js to v1.6.1.